--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-native": "0.71.8",
+    "react-native-animatable": "^1.3.3",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -21,6 +23,12 @@
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
     "@rushstack/eslint-patch": "^1.3.1",
+    "@tsconfig/react-native": "^2.0.2",
+    "@types/jest": "^29.2.1",
+    "@types/react": "^18.0.27",
+    "@types/react-native-vector-icons": "^6.4.13",
+    "@types/react-test-renderer": "^18.0.0",
+    "babel-jest": "^29.2.1",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
@@ -28,14 +36,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "@tsconfig/react-native": "^2.0.2",
-    "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.27",
-    "@types/react-test-renderer": "^18.0.0",
-    "prettier": "^2.8.7",
-    "babel-jest": "^29.2.1",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
+    "prettier": "^2.8.7",
     "react-test-renderer": "18.2.0",
     "typescript": "4.9.4"
   },
