--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -19,8 +20,9 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-animatable": "^1.3.3",
-    "react-native-gesture-handler": "^2.12.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.21.0",
     "react-native-vector-icons": "^9.2.0"
