--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo-google-fonts/noto-sans-kr": "^0.2.3",
+    "@expo-google-fonts/noto-serif-kr": "^0.2.3",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.18",
+    "expo-font": "~11.1.1",
+    "expo-splash-screen": "^0.18.2",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -23,8 +27,8 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "^4.5.3",
-    "react-native-screens": "^3.21.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
@@ -35,7 +39,7 @@
     "@rushstack/eslint-patch": "^1.3.1",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
-    "@types/react": "^18.0.27",
+    "@types/react": "~18.0.27",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
