--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo-google-fonts/noto-sans-kr": "^0.2.3",
     "@expo-google-fonts/noto-serif-kr": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/material-bottom-tabs": "^6.2.15",
     "@react-navigation/native": "^6.1.6",
@@ -20,10 +21,13 @@
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "^0.18.2",
+    "expo-sqlite": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-native": "0.71.8",
     "react-native-animatable": "^1.3.3",
+    "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
