--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
     "expo-font": "~11.1.1",
     "expo-splash-screen": "^0.18.2",
@@ -33,7 +34,9 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-vector-icons": "^9.2.0",
+    "react-redux": "^8.1.0",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -46,6 +49,7 @@
     "@types/react": "~18.0.27",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-logger": "^3.0.9",
     "babel-jest": "^29.2.1",
     "eslint": "^8.37.0",
     "eslint-config-prettier": "^8.8.0",
@@ -57,6 +61,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.8.7",
+    "react-native-dotenv": "^3.4.8",
     "react-test-renderer": "18.2.0",
     "typescript": "4.9.4"
   },
