--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
+    "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
+    "expo-notifications": "~0.18.1",
     "expo-splash-screen": "^0.18.2",
     "expo-sqlite": "^11.1.1",
     "expo-status-bar": "~1.4.4",
