--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/adaptive_icon.png",
         "backgroundColor": "#ffffff"
       },
       "versionCode": 1,
@@ -32,11 +32,11 @@
     "plugins": [ [
       "expo-notifications",
       {
-        "icon": "./local/assets/notification-icon.png",
+        "icon": "./assets/notification_icon.png",
         "color": "#ffffff",
         "sounds": [
-          "./local/assets/notification-sound.wav",
-          "./local/assets/notification-sound-other.wav"
+          "./assets/notification_sound.wav",
+          "./assets/notification_sound_other.wav"
         ]
       }
     ]],
