--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write . --ignore-path .gitignore",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
     "@expo-google-fonts/noto-sans-kr": "^0.2.3",
@@ -23,7 +26,7 @@
     "expo-device": "~5.2.1",
     "expo-font": "~11.1.1",
     "expo-notifications": "~0.18.1",
-    "expo-splash-screen": "^0.18.2",
+    "expo-splash-screen": "~0.18.2",
     "expo-sqlite": "^11.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
@@ -60,7 +63,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "jest": "^29.2.1",
+    "jest": "^29.5.0",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.8.7",
     "react-native-dotenv": "^3.4.8",
